--- a/doc/USER_MANUAL/14_post_processing.tex
+++ b/doc/USER_MANUAL/14_post_processing.tex
@@ -92,7 +92,7 @@ Type \texttt{process\_syn.pl} without any argument for a detailed
 usage.
 
 In order to convert between SAC format and ASCII files, useful scripts
-are provided in the subdirectories ~\\
+are provided in the subdirectories ~\newline
  \texttt{utils/sac2000\_alpha\_convert/} and \texttt{utils/seis\_process/asc2sac/}.
 
 
@@ -196,7 +196,7 @@ and `\texttt{-p}' are both optional.
 \subsection{Script \texttt{plot\_shakemap.gmt.pl}}
 
 With the shakemap data saved in \texttt{OUTPUT\_FILES/} at the end
-of a shakemap simulation ~\\
+of a shakemap simulation ~\newline
  (\texttt{CREATE\_SHAKEMAP=.true.}), you can also run \texttt{`create\_movie\_shakemap\_AVS\_DX\_GMT}'
 code to convert the binary shakemap data into GMT xyz files. A sample
 script \texttt{plot\_shakemap.gmt.pl} is provided to do this conversion,
