--- a/doc/USER_MANUAL/A_reference_frame.tex
+++ b/doc/USER_MANUAL/A_reference_frame.tex
@@ -68,7 +68,7 @@ convention: For a receiver station located in an
 \item \texttt{semv} for the velocity vector
 \item \texttt{sema} for the acceleration vector
 \end{itemize}
-\item [{acoustic domain:}] ~\\
+\item [{acoustic domain:}] ~\newline
  (please note that receiver stations in acoustic domains must be buried.
 This is due to the free surface condition which enforces a zero pressure
 at the surface.)
