--- a/doc/USER_MANUAL/C_troubleshooting.tex
+++ b/doc/USER_MANUAL/C_troubleshooting.tex
@@ -180,8 +180,8 @@ find the section:
 }
 
 then change \texttt{DT} in the \texttt{DATA/Par\_file} to be somewhere
-close to the maximum suggested time step. In the example above: \\
- \texttt{DT = 0.05d0} \\
+close to the maximum suggested time step. In the example above: \newline
+ \texttt{DT = 0.05d0} \newline
  would (most probably) work fine. It could be also bigger than the
 0.068 s suggested. This depends a bit on the distortions of your mesh
 elements. The more regular they are, the bigger you can choose \texttt{DT}.
