--- a/doc/USER_MANUAL/authors.tex
+++ b/doc/USER_MANUAL/authors.tex
@@ -69,11 +69,11 @@ Brice Videau,
 Jean-Pierre Vilotte,
 Zhinan Xie,
 Chang-Hua Zhang,
-Hejun Zhu.\\
+Hejun Zhu.\newline
 
 The cover graphic of the manual was created by Santiago Lombeyda from
 Caltech's Center for Advanced Computing Research (CACR), USA, with free satellite clipart pictures
-from \url{http://www.4vector.com} and \url{http://www.clker.com} added to it.\\
+from \url{http://www.4vector.com} and \url{http://www.clker.com} added to it.\newline
 
-The code is released open-source under the GNU version 3 license, see the license at the end of this manual.\\
+The code is released open-source under the GNU version 3 license, see the license at the end of this manual.\newline
 
