--- a/doc/USER_MANUAL/manual_SPECFEM3D_Cartesian.tex
+++ b/doc/USER_MANUAL/manual_SPECFEM3D_Cartesian.tex
@@ -165,13 +165,13 @@
 \par\end{center}
 
 
-\title{\textbf{SPECFEM3D}\\
-\textbf{Cartesian}\\
+\title{\textbf{SPECFEM3D}\newline
+\textbf{Cartesian}\newline
  \textbf{User Manual}}
 
 
-\author{\copyright \, CNRS (France), Princeton University (USA),\\
-and ETH Z\"urich (Switzerland)\\
+\author{\copyright \, CNRS (France), Princeton University (USA),\newline
+and ETH Z\"urich (Switzerland)\newline
 Version 3.0}
 
 % date of last edit
