--- a/doc/USER_MANUAL/notes_and_acknowledgement.tex
+++ b/doc/USER_MANUAL/notes_and_acknowledgement.tex
@@ -19,7 +19,7 @@ now at Argonne National Laboratory, USA).
 OpenDX \urlwithparentheses{http://www.opendx.org} is open-source
 based on IBM Data Explorer, AVS \urlwithparentheses{http://www.avs.com}
 is a trademark of Advanced Visualization Systems, and ParaView \urlwithparentheses{http://www.paraview.org}
-is an open-source visualization platform.\\
+is an open-source visualization platform.\newline
 
 Please provide your feedback, questions, comments, and suggestions through the github repository.
 
